add tenant and PRD
